add screen shots of app

--- a/android/app/src/main/assets/capacitor.config.json
+++ b/android/app/src/main/assets/capacitor.config.json
@@ -1,5 +1,5 @@
 {
-  "appId": "covidtracker",
+  "appId": "io.ionic.starter",
   "appName": "CoronavirusTracker",
   "bundledWebRuntime": false,
   "npmClient": "npm",
